--- a/app/assets/stylesheets/teampage.css
+++ b/app/assets/stylesheets/teampage.css
@@ -1,6 +1,6 @@
 body {
 	background:radial-gradient(circle, #1a82f7, #2F2727);
-	padding-top: 40px;
+	padding-top: 75px;
 	overflow: scroll;
 }
 
